--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 Django==3.2.8
 django-crispy-forms==1.13.0
+django-extensions==3.1.3
 Pillow==8.4.0
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
